added in alt image tags and changed copy to FX ONE

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "Foenix Coding"
 meta_title: "Foenix Coding | Coding and Marking made easy"
-meta_description: "Plug-and-play Industrial inkjet Printers for all types of production lines."
+meta_description: "FX ONE is a plug-and-play Industrial inkjet Printers for all types of production lines."
 meta_image: "meta_image.png"
 twitter_account: "@foenix_coding"
